tests/coverage/misc/fail/negative/008_bare_function_expression.js
// Expected error: function expression in statement position without name
function() {}
